fix(product-selector): fix appearance on mobile

--- a/styles/buttons.styl
+++ b/styles/buttons.styl
@@ -10,6 +10,7 @@
     outline: 0
     cursor: pointer
     transition: all 0.2s ease
+    text-decoration: none
 
     &:hover
       transform: scale(1.03)
