--- a/styles/knightgrams/layouts.styl
+++ b/styles/knightgrams/layouts.styl
@@ -41,6 +41,11 @@
   .exp-field, .cvc
     text-align: center
 
+  .order-list
+    max-width: 500px
+    margin: 0 auto
+    margin-bottom: 40px
+
   .order
     padding: 15px
     margin-bottom: 15px
