--- a/styles/product-selector/colors.styl
+++ b/styles/product-selector/colors.styl
@@ -21,6 +21,7 @@
     &.-selected
       background: accent
       color: white
+      border-color: accent
 
       i
         max-width: 20px
