--- a/styles/product-selector/typography.styl
+++ b/styles/product-selector/typography.styl
@@ -2,6 +2,9 @@
   padding: 30px 0
 
   > .product-item
+    -webkit-tap-highlight-color: rgba(0,0,0,0)
+    -webkit-tap-highlight-color: transparent
+
     .title, .description, .price
       margin-bottom: 10px
 
@@ -11,8 +14,12 @@
     .price
       font-size: 2em
 
-    &:first-child
-      border-radius: 5px 0 0 5px
+    +large()
+      &:first-child
+        border-radius: 5px 0 0 5px
 
-    &:last-child
-      border-radius: 0 5px 5px 0
+      &:last-child
+        border-radius: 0 5px 5px 0
+
+    +not-large()
+      border-radius: 5px
